tests/integration/api_key/snapshots/main__integration__api_key__pairs__a_failed_keys_query_reports_nothing.snap
---
source: tests/integration/api_key/pairs.rs
expression: failed_envelope(&output)
---
{
  "json_version": "1",
  "data": {
    "success": false
  },
  "error": {
    "message": "keys are unavailable",
    "code": null
  }
}
