tests/integration/api_key/snapshots/main__integration__api_key__pairs__delete_reports_the_pair.snap
---
source: tests/integration/api_key/pairs.rs
expression: parsed(successful_stdout(&output).as_bytes())
---
{
  "json_version": "1",
  "data": {
    "id": "c_8f2a",
    "key_type": "ClientCredentials",
    "success": true
  },
  "error": null
}
