tests/integration/api_key/snapshots/main__integration__api_key__pairs__list_reports_pairs_alongside_keys.snap
---
source: tests/integration/api_key/pairs.rs
expression: parsed(successful_stdout(&output).as_bytes())
---
{
  "json_version": "1",
  "data": {
    "keys": [
      {
        "created_at": "2026-01-15T10:00:00Z",
        "expires_at": null,
        "id": "key-operator-1",
        "name": "router-prod",
        "key_type": "Operator"
      }
    ],
    "client_credentials": [
      {
        "key_type": "ClientCredentials",
        "id": "c_8f2a",
        "client_id": "c_8f2a",
        "name": "ci-deploy",
        "graphs": [
          "inventory",
          "checkout"
        ],
        "scopes": [
          "rover:cli"
        ],
        "created_at": "2026-09-25T16:00:00Z",
        "created_by": {
          "id": "user-123",
          "type": "user"
        }
      }
    ],
    "client_credentials_next_after": null,
    "success": true
  },
  "error": null
}
