tests/integration/api_key/snapshots/main__integration__api_key__pairs__rotate_immediate_cutover.snap
---
source: tests/integration/api_key/pairs.rs
expression: envelope
---
{
  "json_version": "1",
  "data": {
    "key_type": "ClientCredentials",
    "id": "c_8f2a",
    "client_id": "c_8f2a",
    "client_secret": "s_fixture-rotated",
    "secret_expires_at": "2028-09-25T16:00:00Z",
    "grace_period_days": 0,
    "previous_secrets_expire_at": "[now + grace period]",
    "success": true
  },
  "error": null
}
